Изменяет стили для блока категории товаров

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,6 +16,7 @@
 @media (min-width: @table-width) {
   .page-main {
     .bg-img("../../img/hero-tablet@1x.jpg");
+    background-position: 50% 0;
 
     &__title {
       .container(668px; 50px);
@@ -31,7 +32,7 @@
   .page-main {
     &__title {
       width: 1050px;
-      padding-bottom: 358px;
+      padding-bottom: 354px;
       font-size: 53px;
       line-height: 57px;
     }
