Добавляет новый блок таблицы и подключает его

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,5 +30,6 @@
 @import "blocks/search-form.less";
 @import "blocks/site-nav.less";
 @import "blocks/social.less";
+@import "blocks/table-description.less";
 @import "blocks/user-list.less";
 @import "blocks/write-us.less";
