--- a/source/less/globals/mixins.less
+++ b/source/less/globals/mixins.less
@@ -37,3 +37,14 @@
 .pos-top(@pos-top: 65px) {
   top: @pos-top;
 }
+
+.button(@width: 260px; @min-height: 52px;) {
+  width: @width;
+  min-height: @min-height;
+  border: 2px solid @button-color;
+  text-align: center;
+  .font(17px; 700; 20px);
+  text-transform: uppercase;
+  color: @button-color;
+  background-color: transparent;
+}
