--- a/source/less/blocks/table-description.less
+++ b/source/less/blocks/table-description.less
@@ -19,3 +19,15 @@
     line-height: 20px;
   }
 }
+
+@media (min-width: @table-width) {
+  .table-description {
+    width: 290px;
+    margin-bottom: 56px;
+
+    &__column1 {
+      width: 34%;
+      padding-top: 10px;
+    }
+  }
+}
