Вносит изменение по цветам

--- a/source/less/blocks/field-email.less
+++ b/source/less/blocks/field-email.less
@@ -13,7 +13,7 @@
 
 @media (min-width: @table-width) {
   .field-email {
-    background-color: @bg-block;
+    background-color: @bg-block-dark;
     flex-direction: row;
 
     &__legend {
