--- a/source/less/blocks/fieldset-color.less
+++ b/source/less/blocks/fieldset-color.less
@@ -11,7 +11,7 @@
 
 @media (min-width: @table-width) {
   .fieldset-color {
-    background-color: @bg-block;
+    background-color: @bg-block-dark;
 
     &__legend {
       position: relative;
