--- a/source/less/blocks/page-main-catalog.less
+++ b/source/less/blocks/page-main-catalog.less
@@ -1,6 +1,6 @@
 .page-main-catalog__title {
   .pm-zero();
-  background-color: @bg-block;
+  background-color: @bg-block-dark;
 
   span {
     display: block;
