--- a/source/less/blocks/field-tel.less
+++ b/source/less/blocks/field-tel.less
@@ -13,7 +13,7 @@
 
 @media (min-width: @table-width) {
   .field-tel {
-    background-color: @bg-block;
+    background-color: @bg-block-dark;
     flex-direction: row;
 
     &__legend {
