--- a/source/less/blocks/page-main-order.less
+++ b/source/less/blocks/page-main-order.less
@@ -1,7 +1,7 @@
 .page-main-order {
   &__title {
     .pm-zero();
-    background-color: @bg-block;
+    background-color: @bg-block-dark;
   }
 
   span {
