подгоняет ошибки пиксел перфект

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -17,11 +17,12 @@
   .page-main {
     .bg-img("../../img/hero-tablet@1x.jpg");
     background-position: 50% 0;
+    background-color: @bg-main;
 
     &__title {
       .container(668px; 50px);
-      padding-top: 158px;
-      padding-bottom: 368px;
+      padding-top: 154px;
+      padding-bottom: 372px;
       font-size: 43px;
       line-height: 50px;
     }
@@ -32,7 +33,7 @@
   .page-main {
     &__title {
       width: 1050px;
-      padding-bottom: 354px;
+      padding-bottom: 358px;
       font-size: 53px;
       line-height: 57px;
     }
