--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -2,6 +2,7 @@
   .container(260px; 30px);
   margin: 0 auto;
   margin-bottom: 35px;
+  background-color: @bg-block-light;
 
   &__header {
     display: flex;
@@ -19,7 +20,7 @@
 
   &__title-product {
     .pm-zero();
-    padding-top: 32px;
+    padding-top: 28px;
     padding-bottom: 5px;
     .font(25px; 700; 30px);
   }
@@ -49,16 +50,12 @@
   .product-week {
     position: relative;
     .container(668px; 50px);
-    margin-top: -18px;
-    .bg-img("../../img/bg-zigzag-fill.svg");
-    background-size: 768px 24px;
-
 
     &__header {
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-end;
-      margin-bottom: 46px;
+      margin-bottom: 48px;
     }
 
     &__title {
@@ -71,8 +68,9 @@
     }
 
     &__title-product {
-      padding-top: 60px;
+      padding-top: 40px;
       padding-bottom: 0;
+      margin-left: -3px;
       .font(43px; 700; 50px);
     }
 
@@ -109,16 +107,32 @@
 
     &__header {
       width: 1050px;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+    }
+
+    &__title {
+      margin-left: 20px;
+      margin-right: 30px;
+    }
+
+    &__title-product {
+      padding-top: 118px;
+      font-size: 53px;
+      line-height: 57px;
+      z-index: 1;
     }
 
     &__image {
-      top: 0;
+      bottom: 0;
       width: 525px;
       height: 635px;
+
     }
 
     &__description {
       margin-left: 175px;
+      margin-bottom: 48px;
     }
 
     &__list-description {
@@ -127,6 +141,7 @@
 
     &__price {
       margin-left: 175px;
+      margin-bottom: 34px;
     }
 
     &__order {
