--- a/source/less/blocks/table-description.less
+++ b/source/less/blocks/table-description.less
@@ -1,7 +1,7 @@
 .table-description {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 28px;
+  margin-bottom: 27px;
 
   &__row {
     border-bottom: 1px solid @table-border;
@@ -14,8 +14,8 @@
 
   &__column1 {
     width: 38%;
-    padding-top: 11px;
-    padding-bottom: 9px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     line-height: 20px;
   }
 }
@@ -27,7 +27,19 @@
 
     &__column1 {
       width: 34%;
-      padding-top: 10px;
+      padding-top: 9px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .table-description {
+    margin-bottom: 107px;
+
+    &__column1 {
+      width: 34%;
+      padding-top: 8px;
+      padding-bottom: 12px;
     }
   }
 }
