Вносит правки в блок товар дня

--- a/source/less/blocks/product-list.less
+++ b/source/less/blocks/product-list.less
@@ -103,7 +103,7 @@
     .container(668px; 50px);
     margin: 0 auto;
 
-    &::before {
+    &::after {
       content: "";
 
       position: absolute;
