--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,14 +1,15 @@
 .social {
-  height: 80px; /*временно для сетки*/
-
   &__list {
     display: flex;
-    .center(150px);
+    justify-content: space-between;
+    align-items: center;
+    width: 141px;
     .pm-zero();
+    padding-left: 56px;
+    padding-right: 61px;
+    padding-top: 25px;
+    padding-bottom: 22px;
     list-style: none;
-  }
-
-  &__item {
-    width: 50px;
+    box-shadow: inset 0px -1px 0px 0px rgba(229, 229, 229, 1);
   }
 }
