--- a/source/less/blocks/product-week.less
+++ b/source/less/blocks/product-week.less
@@ -46,6 +46,19 @@
     .button();
   }
 
+  &__order:hover,
+  &__order:focus {
+    background-color: #444444;
+    color: rgba(255, 255, 255, 1);
+
+    cursor: pointer;
+  }
+
+  &__order:active {
+    color: rgba(255, 255, 255, 0.3);
+
+  }
+
   &::after {
     content: "";
 
