--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -6,7 +6,7 @@
     margin: 0 auto;
   }
 
-  &__icon {
+  &__logo {
     display: none;
   }
 }
@@ -20,7 +20,7 @@
       .container(668px; 50px);
     }
 
-    &__icon {
+    &__logo {
       display: block;
       position: relative;
       top: middle;
@@ -31,6 +31,17 @@
 
       padding-top: 50px;
       padding-bottom: 58px;
+    }
+
+    &__logo:hover,
+    &__logo:focus {
+      path {
+        fill: @icon-color;
+      }
+    }
+
+    &__logo:active {
+      opacity: 0.3;
     }
   }
 }
