--- a/source/less/blocks/write-us.less
+++ b/source/less/blocks/write-us.less
@@ -15,6 +15,12 @@
     list-style: none;
   }
 
+  &__column1-list,
+  &__column2-list {
+    .pm-zero();
+    list-style: none;
+  }
+
   &__item {
     position: relative;
     padding-top: 55px;
