--- a/source/less/blocks/page-main-catalog.less
+++ b/source/less/blocks/page-main-catalog.less
@@ -4,10 +4,12 @@
 
   span {
     display: block;
-    height: 175px; /*временно для сетки*/
+    padding-top: 70px;
+    padding-bottom: 76px;
     .container(260px; 30px);
     margin: 0 auto;
     .font(27px; 700; 30px);
+    text-align: center;
   }
 }
 
