добавляет стили страницы каталога(desktop)

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -18,11 +18,12 @@
 @media (min-width: @desktop-width) {
   .catalog {
     width: 1050px;
-    padding-top: 130px;
+    padding-top: 85px;
 
     &__list {
       display: flex;
       justify-content: space-between;
+      align-items: flex-start;
     }
   }
 }
