--- a/source/less/blocks/page-main-catalog.less
+++ b/source/less/blocks/page-main-catalog.less
@@ -50,8 +50,14 @@
   .page-main-catalog {
     &__title {
       span {
-        height: 235px; /*временно для сетки*/
         width: 1050px;
+        .font(53px; 700; 57px);
+        padding-bottom: 114px;
+
+        &::after {
+          height: 34px;
+          background-size: 1150px 34px;
+        }
       }
     }
   }
