Исправляет стили копирайта, добавляет визуализацию взаимодействия пользователя

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -20,15 +20,16 @@
   }
 
   &__text {
+    display: block;
     .font(19px; 700; 18px);
     color: @link-color;
-    padding-top: 55px;
-    padding-bottom: 58px;
+    padding-top: 27px;
+    padding-bottom: 33px;
   }
 
   &__logo {
     position: absolute;
-    top: -2px;
+    top: 22px;
     right: 0;
 
     width: 27px;
