--- a/source/less/blocks/item.less
+++ b/source/less/blocks/item.less
@@ -7,11 +7,11 @@
 
   &:hover,
   &:focus {
-    box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   }
 
   &:active {
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
   }
 
   &:hover &__title,
@@ -77,7 +77,6 @@
 
 @media (min-width: @table-width) {
   .item {
-
     &:not(:last-child) {
       margin-bottom: 52px;
     }
@@ -129,7 +128,6 @@
 
 @media (min-width: @desktop-width) {
   .item {
-
     &:not(:last-child) {
       margin-bottom: 0;
     }
