Исправляет ошибки по Тревису

--- a/source/less/blocks/product-list.less
+++ b/source/less/blocks/product-list.less
@@ -27,7 +27,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: 0px -5px 0px 0px @bg-title-light;
+      box-shadow: 0 -5px 0 0 @bg-title-light;
 
       .product-list__title {
         padding-top: 21px;
@@ -60,7 +60,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: 0px -5px 0px 0px @bg-title-dark;
+      box-shadow: 0 -5px 0 0 @bg-title-dark;
 
       .product-list__title {
         padding-top: 21px;
@@ -75,7 +75,6 @@
   }
 
   &__item:active {
-
     .product-list__title {
       opacity: 0.3;
     }
@@ -120,7 +119,6 @@
 
         &:hover,
         &:focus {
-
           .product-list__title {
             padding-top: 28px;
             padding-bottom: 37px;
@@ -140,7 +138,6 @@
 
         &:hover,
         &:focus {
-
           .product-list__title {
             padding-top: 28px;
             padding-bottom: 37px;
