--- a/source/less/blocks/search-form.less
+++ b/source/less/blocks/search-form.less
@@ -7,7 +7,7 @@
     padding-bottom: 31px;
     padding-left: 76px;
     border: none;
-    box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1);
+    box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1);
 
     &::placeholder {
       .font(17px; 700; 24px);
@@ -50,14 +50,14 @@
   .search-form {
     margin-left: auto;
     min-height: 89px;
-    box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1);
+    box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1);
 
     &__item {
       width: 83px;
       padding-top: 36px;
       padding-bottom: 35px;
-      box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1),
-      inset 1px 0px 0px 0px rgba(236, 236, 236, 1);
+      box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1),
+      inset 1px 0 0 0 rgba(236, 236, 236, 1);
       background-color: transparent;
     }
 
