--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,7 +10,7 @@
     padding-top: 25px;
     padding-bottom: 22px;
     list-style: none;
-    box-shadow: inset 0px -1px 0px 0px rgba(229, 229, 229, 1);
+    box-shadow: inset 0 -1px 0 0 rgba(229, 229, 229, 1);
   }
 
   &__icon:hover,
