--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -15,7 +15,7 @@
     padding-bottom: 27.5px;
     padding-left: 76px;
     color: @link-color;
-    box-shadow: inset 0px 1px 0px 0px rgba(236, 236, 236, 1);
+    box-shadow: inset 0 1px 0 0 rgba(236, 236, 236, 1);
 
     &:hover,
     &:focus {
@@ -59,7 +59,7 @@
     width: 264px;
 
     &__item {
-      box-shadow: inset 1px 0px 0px 0px rgba(236, 236, 236, 1);
+      box-shadow: inset 1px 0 0 0 rgba(236, 236, 236, 1);
       text-align: right;
     }
 
