Исправляет ошибки по Тревису

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -80,7 +80,7 @@
   }
 }
 
-@media (@mobile-only) {
+@media (max-width: @mobile-only) {
   .main-nav {
     &--closed .site-nav {
       display: none;
