--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,13 +1,18 @@
 .reviews {
+  position: relative;
   .container(260px; 30px);
-  padding-top: 30px;
+  padding-top: 27px;
   padding-bottom: 45px;
   margin: 0 auto;
 
   &__title {
     .pm-zero();
     .font(25px; 700; 30px);
-    margin-bottom: 30px;
+    margin-bottom: 23px;
+  }
+
+  &__list {
+    margin-bottom: 32px;
   }
 
   &__item {
@@ -18,38 +23,67 @@
 
   &__author-name {
     .font(17px; 700; 24px);
+    font-style: normal;
   }
 
   &__author-email {
+
     .font(17px; 400; 30px);
-    margin-bottom: 30px;
+    font-style: normal;
   }
 
   &__text {
     .pm-zero();
     .font(15px; 400; 30px);
-    margin-bottom: 30px;
+    margin-bottom: 27px;
   }
 
   &__buttons {
     display: flex;
     width: 260px;
     height: 50px;
-    margin-bottom: 38px;
+    .pm-zero();
+    margin-bottom: 40px;
   }
 
   &__prev {
-    width: 130px;
+    box-sizing: border-box;
+    .button(130px; 52px);
+    border: 1px solid rgba(229, 229, 229, 1);
+    border-right: none;
+    .bg-img("../../img/icon-left-arrow.svg");
+    background-position: 37px;
   }
 
   &__next {
-    width: 130px;
+    box-sizing: border-box;
+    .button(130px; 52px);
+    border: 1px solid rgba(229, 229, 229, 1);
+    .bg-img("../../img/icon-right-arrow.svg");
+    background-position: 37px;
   }
 
   &__write {
     display: block;
-    height: 52px; /*временно*/
-    width: 260px;
+    box-sizing: border-box;
+    .button();
+    padding: 14px 0;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    bottom: -6px;
+    right: 0;
+    z-index: 1;
+
+    width: 100%;
+    height: 7px;
+
+    .bg-img("../../img/bg-zigzag-line.svg");
+    background-size: 319px 7px;
+    transform: scale(1, -1);
   }
 }
 
